<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.helper.groupa.studenthelper.AddSemesterGPAActivity"
    android:orientation="vertical">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/semesterTitleTextEdit"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:maxLength="25"
        android:hint="Set Semester Title" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/setGPAButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Set GPA"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/OrTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OR"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/chooseClassesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose Classes"
            android:layout_gravity="center"/>
    </LinearLayout>







</LinearLayout>
