...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/addCourseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:text="Add Course" />
            <Button
                android:id="@+id/calculateGPAButton"
...
