<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:id= "@+id/addPageLayout"
    tools:context="com.helper.groupa.studenthelper.addPageActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/class_label"
        android:id="@+id/class_label"
         />

    <EditText
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/class_editText"
        android:labelFor="@string/class_label"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/assignment_label"
        android:id="@+id/assignment_label" />

    <EditText
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:id="@+id/assignment_editText"
        android:label=""
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dueDate_label"
        android:id="@+id/dueDate_Lab"
        />

    <DatePicker
        android:id="@+id/agenda_add_datePicker"
        android:layout_width="323dp"
        android:layout_height="103dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"

        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:id="@+id/action_add_button"
        android:layout_marginTop="54dp"
        android:layout_gravity="center_horizontal"
        android:onClick="finishAddAssignment"/>

</LinearLayout>
</ScrollView>