...
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HomeActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agenda"
        android:id="@+id/agenda"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/gpaCalc"
        android:layout_alignEnd="@+id/scheduleButton"
        android:onClick="viewAgenda"
        />
...
